[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = jaraco.docker
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Docker facilities
long_description = file:README.rst
url = https://github.com/jaraco/jaraco.docker
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.5
install_requires =
	jaraco.functools
	jaraco.context
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
